/*
 * Licensed to the Apache Software Foundation (ASF) under one or more contributor license
 * agreements. See the NOTICE file distributed with this work for additional information regarding
 * copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance with the License. You may obtain a
 * copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software distributed under the License
 * is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
 * or implied. See the License for the specific language governing permissions and limitations under
 * the License.
 */

syntax = "proto3";
package org.apache.geode.internal.protocol.protobuf.v1;

message HandshakeRequest {
    //Credentials used to authenticate with the security service
    //Not required if the server does not have a security service enabled
    map<string,string> credentials = 1;

    // Set the serialization format for values. This should match the getID of a registered
    // org.apache.geode.protocol.serialization.ValueSerializer on the server side.
    //
    // If set any EncodedValue can be sent using EncodedValue.customObjectResult, and EncodedValues
    // sent by the server may also come back as EncodedValue.customObjectResult.
    //
    // If not set the server will attempt to convert non primative objects to JSON and
    // send them as EncodedValue.jsonResult.
    string valueFormat = 2;
}

message HandshakeResponse {
    bool authenticated = 1;
}

message DisconnectClientRequest {
    string reason = 1;
}

message DisconnectClientResponse {
    // message presence indicates success.
}